--- a/whatsapp.html
+++ b/whatsapp.html
@@ -1,5 +1,5 @@
 <!-- whatsapp.html -->
-<div class="whatsapp-label">Fale comigo</div>
+<div class="whatsapp-label">Dúvidas?</div>
 
 <div class="whatsapp-fab" role="link" aria-label="Conversar pelo WhatsApp">
   <a id="waFab" href="#" aria-label="WhatsApp">
