--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     
     <div class="logo">
-  <img src="assets/img/logophormula1.png" alt="Logo da Farmácia">
+  <img src="assets/img/logosite.png" alt="Logo IGC Treinamentos">
 </div>
 
     <button class="menu-toggle" id="menuToggle">☰</button>
