--- a/index.html
+++ b/index.html
@@ -106,6 +106,55 @@
     </div>
   </main>
 
+
+  <section class="ads-logos">
+  <div class="ads-container">
+
+    <h2 class="ads-logos-title">
+      Empresas que já confiaram em nossos treinamentos
+    </h2>
+
+    <div class="ads-wrapper">
+      <div class="ads-track logos-track">
+        <img src="assets/img/logos/logo1.jpg" alt="Empresa 1">
+        <img src="assets/img/logos/logo2.jpg" alt="Empresa 2">
+        <img src="assets/img/logos/logo3.jpg" alt="Empresa 3">
+        <img src="assets/img/logos/logo4.jpg" alt="Empresa 4">
+        <img src="assets/img/logos/logo5.jpg" alt="Empresa 5">
+        <img src="assets/img/logos/logo6.jpg" alt="Empresa 6">
+        <img src="assets/img/logos/logo7.png" alt="Empresa 7">
+        <img src="assets/img/logos/logo8.png" alt="Empresa 8">
+        <img src="assets/img/logos/logo9.png" alt="Empresa 9">
+        <img src="assets/img/logos/logo10.png" alt="Empresa 10">
+        <img src="assets/img/logos/logo11.png" alt="Empresa 11">
+        <img src="assets/img/logos/logo12.png" alt="Empresa 12">
+        <img src="assets/img/logos/logo13.png" alt="Empresa 13">
+        <img src="assets/img/logos/logo14.png" alt="Empresa 14">
+        <img src="assets/img/logos/logo15.png" alt="Empresa 15">
+        <img src="assets/img/logos/logo16.png" alt="Empresa 16">
+        <img src="assets/img/logos/logo17.png" alt="Empresa 17">
+        <img src="assets/img/logos/logo18.png" alt="Empresa 18">
+        <img src="assets/img/logos/logo19.png" alt="Empresa 19">
+        <img src="assets/img/logos/logo20.png" alt="Empresa 20">
+        <img src="assets/img/logos/logo21.png" alt="Empresa 21">
+        <img src="assets/img/logos/logo22.png" alt="Empresa 22">
+        
+      </div>
+    </div>
+
+    <div class="ads-dots logos-dots"></div>
+
+    <div class="ads-progress">
+      <div class="ads-progress-bar logos-progress-bar"></div>
+    </div>
+
+  </div>
+</section>
+
+
+  
+
+  
   <!-- ======================================================
        FOOTER / RODAPÉ
        ====================================================== -->
