--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </h2>
 
     <div class="ads-wrapper">
-      <div class="ads-track logos-track">
+      <div class="logos-track">
         <img src="assets/img/logos/logo1.jpg" alt="Empresa 1">
         <img src="assets/img/logos/logo2.jpg" alt="Empresa 2">
         <img src="assets/img/logos/logo3.jpg" alt="Empresa 3">
