--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
         <img src="assets/img/logos/logo7.png" alt="Empresa 7">
         <img src="assets/img/logos/logo8.png" alt="Empresa 8">
         <img src="assets/img/logos/logo9.png" alt="Empresa 9">
-        <img src="assets/img/logos/logo10.png" alt="Empresa 10">
         <img src="assets/img/logos/logo11.png" alt="Empresa 11">
         <img src="assets/img/logos/logo12.png" alt="Empresa 12">
         <img src="assets/img/logos/logo13.png" alt="Empresa 13">
@@ -135,7 +134,7 @@
         <img src="assets/img/logos/logo17.png" alt="Empresa 17">
         <img src="assets/img/logos/logo18.png" alt="Empresa 18">
         <img src="assets/img/logos/logo19.png" alt="Empresa 19">
-        <img src="assets/img/logos/logo20.png" alt="Empresa 20">
+        <img src="assets/img/logos/logo20.jpg" alt="Empresa 20">
         <img src="assets/img/logos/logo21.png" alt="Empresa 21">
         <img src="assets/img/logos/logo22.png" alt="Empresa 22">
         
