--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="ads-container">
 
     <h2 class="ads-logos-title">
-      Empresas que já confiaram em nossos treinamentos
+      Empresas que confiam em nossos treinamentos
     </h2>
 
     <div class="ads-wrapper">
@@ -143,9 +143,7 @@
 
     <div class="ads-dots logos-dots"></div>
 
-    <div class="ads-progress">
-      <div class="ads-progress-bar logos-progress-bar"></div>
-    </div>
+    
 
   </div>
 </section>
