--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="ads-container">
 
     <h2 class="ads-logos-title">
-      Empresas que confiam em nossos treinamentos
+      Nossos Clientes
     </h2>
 
     <div class="ads-wrapper">
