--- a/index.html
+++ b/index.html
@@ -69,6 +69,67 @@
     </div>
     
 </section>
+
+
+
+
+
+<!-- ======================================================
+     SEÇÃO INSTITUCIONAL / AUTORIDADE
+     ====================================================== -->
+<section class="institucional">
+  <div class="container institucional-grid">
+
+    <!-- BLOCO 1 -->
+    <div class="institucional-texto">
+      <span class="institucional-eyebrow">
+        PARA PESSOAS E EMPRESAS
+      </span>
+
+      <h2>
+        Alcance resultados extraordinários
+      </h2>
+
+      <p>
+        Há mais de uma década somos referência em treinamentos e desenvolvimento humano.
+        Acreditamos que empresas só crescem de forma sustentável quando investem em pessoas
+        com alto nível técnico, emocional e comportamental.
+      </p>
+    </div>
+
+    <div class="institucional-imagem">
+      <img src="assets/img/institucional-1.jpg" alt="Crescimento profissional">
+    </div>
+
+    <!-- BLOCO 2 -->
+    <div class="institucional-imagem">
+      <img src="assets/img/institucional-2.jpg" alt="Desenvolvimento humano">
+    </div>
+
+    <div class="institucional-texto">
+      <span class="institucional-eyebrow">
+        CADA PASSO DADO É UM AVANÇO NO SER
+      </span>
+
+      <h2>
+        Desenvolver-se é expandir limites.
+      </h2>
+
+      <p>
+        Profissionais de alto desempenho são formados por equilíbrio emocional,
+        inteligência relacional e aprendizado contínuo. Nossos treinamentos
+        capacitam pessoas a se tornarem líderes conscientes e preparados.
+      </p>
+    </div>
+
+  </div>
+</section>
+  
+
+  
+
+
+  
   
   <!-- ======================================================
        BANNER DINÂMICO (PROMOÇÕES / DESTAQUES)
