--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
      SEÇÃO INSTITUCIONAL / AUTORIDADE
      ====================================================== -->
 <section class="institucional">
-  <div class="container institucional-grid">
+  <div class="institucional-inner">
+    <div class="institucional-grid">
 
     <!-- BLOCO 1 -->
     <div class="institucional-texto">
@@ -121,7 +122,6 @@
         capacitam pessoas a se tornarem líderes conscientes e preparados.
       </p>
     </div>
-
   </div>
 </section>
   
