--- a/index.html
+++ b/index.html
@@ -177,6 +177,69 @@
     </div>
   </section>
 
+
+
+  <!-- ======================================================
+     BLOCO INSTITUCIONAL – REPRESENTANTE EBWU
+     ====================================================== -->
+<section class="institucional institucional-ebwu">
+  <div class="institucional-inner">
+
+    <!-- TÍTULO CENTRAL -->
+    <div class="institucional-header">
+      <h2 class="institucional-title-center">
+        IGC é representante da EBWU
+      </h2>
+    </div>
+
+    <!-- GRID PRINCIPAL -->
+    <div class="institucional-grid ebwu-grid">
+
+      <!-- LOGO EBWU -->
+      <div class="institucional-imagem">
+        <img src="assets/img/ebwu-logo.png"
+             alt="EBWU – Emil Brunner World University">
+      </div>
+
+      <!-- IMAGEM LAUREADOS -->
+      <div class="institucional-imagem">
+        <img src="assets/img/ebwu-laureados.jpg"
+             alt="Laureados e representantes da EBWU">
+      </div>
+
+      <!-- TEXTO -->
+      <div class="institucional-texto ebwu-texto">
+        <p>
+          O IGC – Instituto Global de Consultoria atua como representante
+          institucional da Emil Brunner World University (EBWU),
+          conectando o Brasil a uma rede internacional de excelência acadêmica,
+          reconhecimento honorífico e desenvolvimento humano de alto nível.
+        </p>
+
+        <p>
+          Por meio dessa parceria, profissionais, líderes e pesquisadores
+          têm acesso a certificações, honrarias e programas que reforçam
+          credibilidade, autoridade intelectual e impacto social.
+        </p>
+
+        <a
+          href="https://1porcentodigital.com.br/dr-paulo-takahashi/"
+          target="_blank"
+          rel="noopener"
+          class="btn btn-primary"
+        >
+          Saiba mais
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  
+  
+  
+
   <!-- ======================================================
        CONTEÚDO PRINCIPAL
        ====================================================== -->
