--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
       <!-- IMAGEM LAUREADOS -->
       <div class="institucional-imagem">
-        <img src="assets/img/ebwu-laureados.jpg"
+        <img src="assets/img/ebwu-laureados.jpeg"
              alt="Laureados e representantes da EBWU">
       </div>
 
