--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <!-- TÍTULO CENTRAL -->
     <div class="institucional-header">
       <h2 class="institucional-title-center">
-        IGC é representante da EBWU
+        Somos representante da EBWU
       </h2>
     </div>
 
@@ -223,13 +223,14 @@
         </p>
 
         <a
-          href="https://1porcentodigital.com.br/dr-paulo-takahashi/"
-          target="_blank"
-          rel="noopener"
-          class="btn btn-primary"
-        >
-          Saiba mais
-        </a>
+  href="https://1porcentodigital.com.br/dr-paulo-takahashi/"
+  target="_blank"
+  rel="noopener"
+  class="btn btn-primary"
+>
+  Saiba mais
+</a>
+
       </div>
 
     </div>
