--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
           credibilidade, autoridade intelectual e impacto social.
         </p>
 
-        <a
+       <a
   href="https://1porcentodigital.com.br/dr-paulo-takahashi/"
   target="_blank"
   rel="noopener"
-  class="btn btn-primary"
+  class="btn-comprar"
 >
   Saiba mais
 </a>
