--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <!-- TÍTULO CENTRAL -->
     <div class="institucional-header">
       <h2 class="institucional-title-center">
-        Somos representante da EBWU
+        Representante EBWU
       </h2>
     </div>
 
@@ -261,7 +261,7 @@
   <div class="ads-container">
 
     <h2 class="ads-logos-title">
-      Nossos Clientes
+      Alguns de Nossos Clientes
     </h2>
 
     <div class="ads-wrapper">
