--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </div>
 
       <!-- IMAGEM LAUREADOS -->
-      <div class="institucional-imagem">
+      <div class="institucional-imagem sem-quadro-mobile">
         <img src="assets/img/ebwu-laureados.jpeg"
              alt="Laureados e representantes da EBWU">
       </div>
