--- a/index.html
+++ b/index.html
@@ -188,25 +188,20 @@
   <div class="institucional-inner">
 
     <div class="institucional-header">
-      <h2 class="institucional-title-center">
-        Nossa Equipe
-      </h2>
+      <h2 class="institucional-title-center">Nossa Equipe</h2>
     </div>
 
-    <div class="slider slider-equipe">
-      <button class="arrow left">‹</button>
-
-      <div class="slider-track equipe-track" id="equipe-container">
-        <!-- Cards gerados via JS -->
+    <div class="equipe-slider">
+      <div class="equipe-track">
+        <!-- cards gerados via JS -->
       </div>
-
-      <button class="arrow right">›</button>
     </div>
 
-    <div class="slider-dots equipe-dots"></div>
+    <div class="equipe-dots"></div>
 
   </div>
 </section>
+
 
 
   
