--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <h2 class="institucional-title-center">Nossa Equipe</h2>
     </div>
 
-    <div class="equipe-slider">
+    <div class="slider equipe-slider slider-estatico">
       <div class="equipe-track">
         <!-- cards gerados via JS -->
       </div>
