--- a/index.html
+++ b/index.html
@@ -203,9 +203,28 @@
 </section>
 
 
-
+<!-- ======================================================
+     BLOCO INSTITUCIONAL — DEPOIMENTOS
+     ====================================================== -->
   
+<section class="testimonials">
+  <h2 class="testimonials-title">O que dizem nossos alunos</h2>
 
+  <div class="testimonials-slider">
+    <div class="testimonials-track">
+
+      <div class="testimonial-card" data-video="BEV6upQhPEA"></div>
+      <div class="testimonial-card" data-video="7uC4pstQS4Y"></div>
+      <div class="testimonial-card" data-video="Fu-WNt6muDc"></div>
+      <div class="testimonial-card" data-video="PQn3T-R6BmQ"></div>
+      <div class="testimonial-card" data-video="nyRvRtNetrA"></div>
+      <div class="testimonial-card" data-video="DZR50Zx1mGU"></div>
+
+    </div>
+  </div>
+
+  <div class="testimonials-dots"></div>
+</section>
 
   
 
@@ -480,6 +499,29 @@
 <script src="./js/load-whatsapp.js"></script>
 <!-- Script para carregar integração/funcionalidade do WhatsApp -->
 
+
+
+
+<!-- ======================================================
+       VIDEO MODAL
+       ====================================================== -->
+
+
+<div class="video-modal" id="videoModal">
+  <div class="video-modal-content">
+    <button class="video-close">&times;</button>
+    <iframe
+      id="videoIframe"
+      src=""
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+
+
+  
    
 </body>
 </html>
