--- a/index.html
+++ b/index.html
@@ -207,24 +207,33 @@
      BLOCO INSTITUCIONAL — DEPOIMENTOS
      ====================================================== -->
   
-<section class="testimonials">
-  <h2 class="testimonials-title">O que dizem nossos alunos</h2>
+<section class="institucional testimonials">
+  <div class="institucional-inner">
 
-  <div class="testimonials-slider">
-    <div class="testimonials-track">
-
-      <div class="testimonial-card" data-video="BEV6upQhPEA"></div>
-      <div class="testimonial-card" data-video="7uC4pstQS4Y"></div>
-      <div class="testimonial-card" data-video="Fu-WNt6muDc"></div>
-      <div class="testimonial-card" data-video="PQn3T-R6BmQ"></div>
-      <div class="testimonial-card" data-video="nyRvRtNetrA"></div>
-      <div class="testimonial-card" data-video="DZR50Zx1mGU"></div>
-
+    <div class="institucional-header">
+      <h2 class="institucional-title-center">
+        O que dizem nossos alunos
+      </h2>
     </div>
-  </div>
 
-  <div class="testimonials-dots"></div>
+    <div class="testimonials-slider">
+      <div class="testimonials-track">
+
+        <div class="testimonial-card" data-video="BEV6upQhPEA"></div>
+        <div class="testimonial-card" data-video="7uC4pstQS4Y"></div>
+        <div class="testimonial-card" data-video="Fu-WNt6muDc"></div>
+        <div class="testimonial-card" data-video="PQn3T-R6BmQ"></div>
+        <div class="testimonial-card" data-video="nyRvRtNetrA"></div>
+        <div class="testimonial-card" data-video="DZR50Zx1mGU"></div>
+
+      </div>
+    </div>
+
+    <div class="testimonials-dots"></div>
+
+  </div>
 </section>
+
 
   
 
