--- a/index.html
+++ b/index.html
@@ -203,33 +203,72 @@
 </section>
 
 
-<!-- ======================================================
-     BLOCO INSTITUCIONAL — DEPOIMENTOS
-     ====================================================== -->
-  
-<section class="institucional testimonials">
-  <div class="institucional-inner">
+ 
+<!-- ===============================
+     O QUE DIZEM NOSSOS ALUNOS
+================================ -->
+<section class="depoimentos">
+  <div class="depoimentos-inner">
 
-    <div class="institucional-header">
-      <h2 class="institucional-title-center">
-        O que dizem nossos alunos
-      </h2>
-    </div>
+    <h2 class="depoimentos-title">
+      O que dizem nossos alunos
+    </h2>
 
-    <div class="testimonials-slider">
-      <div class="testimonials-track">
+    <div class="depoimentos-slider">
+      <div class="depoimentos-track">
 
-        <div class="testimonial-card" data-video="BEV6upQhPEA"></div>
-        <div class="testimonial-card" data-video="7uC4pstQS4Y"></div>
-        <div class="testimonial-card" data-video="Fu-WNt6muDc"></div>
-        <div class="testimonial-card" data-video="PQn3T-R6BmQ"></div>
-        <div class="testimonial-card" data-video="nyRvRtNetrA"></div>
-        <div class="testimonial-card" data-video="DZR50Zx1mGU"></div>
+        <!-- CARD 1 -->
+        <div class="depoimento-card" data-video="BEV6upQhPEA">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/BEV6upQhPEA/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
+
+        <!-- CARD 2 -->
+        <div class="depoimento-card" data-video="7uC4pstQS4Y">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/7uC4pstQS4Y/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="depoimento-card" data-video="Fu-WNt6muDc">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/Fu-WNt6muDc/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
+
+        <!-- CARD 4 -->
+        <div class="depoimento-card" data-video="PQn3T-R6BmQ">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/PQn3T-R6BmQ/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
+
+        <!-- CARD 5 -->
+        <div class="depoimento-card" data-video="nyRvRtNetrA">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/nyRvRtNetrA/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
+
+        <!-- CARD 6 -->
+        <div class="depoimento-card" data-video="DZR50Zx1mGU">
+          <div class="video-thumb">
+            <img src="https://img.youtube.com/vi/DZR50Zx1mGU/hqdefault.jpg" alt="Depoimento">
+            <span class="play-btn"></span>
+          </div>
+        </div>
 
       </div>
-    </div>
 
-    <div class="testimonials-dots"></div>
+      <div class="depoimentos-dots"></div>
+    </div>
 
   </div>
 </section>
@@ -516,18 +555,14 @@
        ====================================================== -->
 
 
-<div class="video-modal" id="videoModal">
+<!-- MODAL DE VÍDEO -->
+<div id="videoModal" class="video-modal">
   <div class="video-modal-content">
-    <button class="video-close">&times;</button>
-    <iframe
-      id="videoIframe"
-      src=""
-      frameborder="0"
-      allow="autoplay; encrypted-media"
-      allowfullscreen>
-    </iframe>
+    <button class="video-close">×</button>
+    <iframe id="videoFrame" src="" allowfullscreen></iframe>
   </div>
 </div>
+
 
 
   
