--- a/index.html
+++ b/index.html
@@ -506,13 +506,19 @@
        ====================================================== -->
 
 
-<!-- MODAL DE VÍDEO -->
-<div id="videoModal" class="video-modal">
+<div class="video-modal" id="videoModal">
   <div class="video-modal-content">
-    <button class="video-close">×</button>
-    <iframe id="videoFrame" src="" allowfullscreen></iframe>
+    <span class="video-close" id="closeVideo">&times;</span>
+    <iframe
+      id="videoIframe"
+      src=""
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen
+    ></iframe>
   </div>
 </div>
+
 
 
 
