--- a/index.html
+++ b/index.html
@@ -205,6 +205,36 @@
 
 
   
+<!-- ======================================================
+     BLOCO – O QUE DIZEM NOSSOS ALUNOS
+     ====================================================== -->
+<section class="institucional depoimentos">
+  <div class="institucional-inner">
+
+    <div class="institucional-header">
+      <h2 class="institucional-title-center">
+        O que dizem nossos alunos
+      </h2>
+    </div>
+
+    <div class="depoimentos-slider">
+      <div class="depoimentos-track">
+        <!-- cards gerados via JS -->
+      </div>
+    </div>
+
+    <div class="depoimentos-dots"></div>
+
+  </div>
+</section>
+
+<!-- MODAL DE VÍDEO -->
+<div class="video-modal" id="videoModal">
+  <div class="video-modal-content">
+    <button class="video-modal-close" id="videoModalClose">×</button>
+    <div class="video-modal-frame" id="videoModalFrame"></div>
+  </div>
+</div>
 
 
   
