--- a/index.html
+++ b/index.html
@@ -204,6 +204,39 @@
 
 
 
+  <!-- ======================================================
+     BLOCO – O QUE O IGC FAZ POR VOCÊ
+     ====================================================== -->
+<section class="institucional igc-videos">
+  <div class="institucional-inner">
+
+    <div class="institucional-header">
+      <h2 class="institucional-title-center">
+        O que o IGC faz por você
+      </h2>
+    </div>
+
+    <div class="igc-videos-slider">
+      <div class="igc-videos-track">
+        <!-- cards gerados via JS -->
+      </div>
+    </div>
+
+    <div class="igc-videos-dots"></div>
+
+  </div>
+</section>
+
+<!-- MODAL – IGC VIDEOS -->
+<div class="igc-video-modal" id="igcVideoModal">
+  <div class="igc-video-modal-content">
+    <button class="igc-video-close" id="igcVideoClose">×</button>
+    <div class="igc-video-frame" id="igcVideoFrame"></div>
+  </div>
+</div>
+
+  
+  
   
 <!-- ======================================================
      BLOCO – O QUE DIZEM NOSSOS ALUNOS
