--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <div class="institucional-header">
       <h2 class="institucional-title-center">
-        O que o IGC faz por você
+        Treinamentos Imersivo em PNL
       </h2>
     </div>
 
