--- a/index.html
+++ b/index.html
@@ -333,26 +333,12 @@
 </section>
 
   
-  
-  
 
-  <!-- ======================================================
-       CONTEÚDO PRINCIPAL
-       ====================================================== -->
-  <main class="main">
-  <div id="produtos-container">
+<!-- ======================================================
+     BLOCO NOSSO CLIENTES
+     ====================================================== -->
 
-
-      <!-- ==================================================
-           As seções de categorias são criadas via JavaScript
-           Cada categoria vira uma <section>
-           ================================================== -->
-
-    </div>
-  </main>
-
-
-  <section class="ads-logos">
+<section class="ads-logos">
   <div class="ads-container">
 
     <h2 class="ads-logos-title">
@@ -389,6 +375,25 @@
 <div class="ads-dots logos-dots"></div>
   </div>
 </section>
+  
+
+  <!-- ======================================================
+       CONTEÚDO PRINCIPAL
+       ====================================================== -->
+  <main class="main">
+  <div id="produtos-container">
+
+
+      <!-- ==================================================
+           As seções de categorias são criadas via JavaScript
+           Cada categoria vira uma <section>
+           ================================================== -->
+
+    </div>
+  </main>
+
+
+  
 
 
   
