--- a/index.html
+++ b/index.html
@@ -191,15 +191,13 @@
       <h2 class="institucional-title-center">Nossa Equipe</h2>
     </div>
 
-    <div class="slider equipe-slider">
-  <button class="arrow left">‹</button>
+    <div class="slider equipe-slider slider-estatico">
+      <div class="equipe-track">
+        <!-- cards gerados via JS -->
+      </div>
+    </div>
 
-  <div class="equipe-track"></div>
-
-  <button class="arrow right">›</button>
-</div>
-
-<div class="equipe-dots"></div>
+    <div class="equipe-dots"></div>
 
   </div>
 </section>
