--- a/index.html
+++ b/index.html
@@ -191,9 +191,14 @@
       <h2 class="institucional-title-center">Nossa Equipe</h2>
     </div>
 
-    <div class="slider equipe-slider slider-estatico">
-      <div class="equipe-track">
-        <!-- cards gerados via JS -->
+   <div class="slider equipe-slider slider-estatico">
+  <button class="arrow left">‹</button>
+
+  <div class="equipe-track"></div>
+
+  <button class="arrow right">›</button>
+
+     <!-- cards gerados via JS -->
       </div>
     </div>
 
