--- a/index.html
+++ b/index.html
@@ -545,6 +545,10 @@
   <!-- Lógica do site -->
   <script src="js/app.js"></script>
 
+
+  <script src="js/equipe-desktop.js"></script>
+
+
   <script src="./js/config-whatsapp.js"></script>
 <!-- Script com configuração do WhatsApp (número, mensagens, etc.) -->
 
