--- a/index.html
+++ b/index.html
@@ -274,10 +274,21 @@
 </div>
 
 
+
+
   
+  
+<!-- ======================================================
+     BLOCO INSTITUCIONAL – CONHEÇA NOSSA HISTÓRIA
+     ====================================================== -->
+  
+<section id="historia-igc" class="bloco-institucional"></section>
+  
+
 
   
 
+  
   <!-- ======================================================
      BLOCO INSTITUCIONAL – REPRESENTANTE EBWU
      ====================================================== -->
