--- a/index.html
+++ b/index.html
@@ -274,8 +274,12 @@
 </div>
 
 
-  
 
+  <!-- ======================================================
+     BLOCO INSTITUCIONAL – CONHEÇA NOSSA HISTÓRIA
+     ====================================================== -->
+  
+<section id="historia-igc" class="bloco-institucional"></section>
   
 
   <!-- ======================================================
