--- a/index.html
+++ b/index.html
@@ -274,7 +274,54 @@
 </div>
 
 
-  
+  <!-- ======================================================
+     BLOCO INSTITUCIONAL – NOSSA HISTÓRIA
+     ====================================================== -->
+<section class="institucional institucional-historia" id="historia-igc">
+  <div class="institucional-inner">
+
+    <!-- TÍTULO CENTRAL -->
+    <div class="institucional-header">
+      <h2 class="institucional-title-center">
+        Nossa História
+      </h2>
+    </div>
+
+    <!-- GRID -->
+    <div class="institucional-grid">
+
+      <!-- TEXTO -->
+      <div class="institucional-texto">
+        <p>
+          O IGC – Instituto Global de Consultoria nasceu com o propósito
+          de desenvolver pessoas e empresas por meio do conhecimento,
+          da consciência e da transformação humana.
+        </p>
+
+        <p>
+          Ao longo dos anos, consolidamos nossa atuação em treinamentos,
+          formações e consultorias que unem técnica, ética e desenvolvimento
+          emocional, sempre alinhados às demandas do mundo moderno.
+        </p>
+
+        <p>
+          Nosso compromisso é formar líderes, profissionais e equipes
+          capazes de gerar impacto positivo, resultados sustentáveis
+          e evolução contínua.
+        </p>
+      </div>
+
+      <!-- IMAGEM -->
+      <div class="institucional-imagem">
+        <img
+          src="assets/img/historia-igc.jpg"
+          alt="História do Instituto Global de Consultoria">
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
   
 
