--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       <!-- IMAGEM -->
       <div class="institucional-imagem">
         <img
-          src="assets/img/historia-igc.jpg"
+          src="assets/img/escritorio-igc.jpg"
           alt="História do Instituto Global de Consultoria">
       </div>
 
