--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
          alt="Certificações e instituições reconhecidas pelo IGC">
   </div>
 
+
+  <div class="certificacoes-imagem">
+    <img src="assets/img/certifinter.png"
+         alt="Certificações e instituições reconhecidas pelo IGC">
+  </div>
+
 </div>
 
       
