--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <div class="certificacoes-imagem">
     <img src="assets/img/certifinter.png"
-         alt="Certificações e instituições reconhecidas pelo IGC">
+         alt="Certificação Internacional em PNL">
   </div>
 
 </div>
